--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -1,6 +1,7 @@
 
 - name: Checkout
-  uses: actions/checkout@v3name: Unit Tests
+  uses: actions/checkout@v3
+name: Unit Tests
 run-name: Run Unit Tests
 on:
   push:
