--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -1,5 +1,4 @@
-name: Checkout
-uses: actions/checkout@v3
+name: Unit Tests
 run-name: Run Unit Tests
 on:
   push:
@@ -8,6 +7,8 @@ on:
       - 'dev'
 jobs:
   unit_testing:
+    - name: Checkout
+    uses: actions/checkout@v3
     runs-on: ubuntu-latest
     steps:
       - name: Run Unit Tests
